# sandbox_copilot

./: .gitignore  CMakeLists.txt  README.md  main.c  queue.c  queue.h  test_CMakeLists.txt  test_queue.cc  test_util.cc  util.c  util.h
include/: queue.h  stack.h
lib/: queue.c  stack.c
src/: main.c  util.c
test/: test_queue.cc  test_stack.cc
